added icon and fixed some layout issues

--- a/res/layout/sample1.xml
+++ b/res/layout/sample1.xml
@@ -30,12 +30,12 @@
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp" />
-
+        
         <ImageView
             android:id="@+id/imageView1"
+            android:layout_below="@+id/assessmentPB"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/recommnedPB"
             android:src="@drawable/divider" />
     </RelativeLayout>
 
