--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -33,7 +33,7 @@
                     android:layout_height="70dp"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/icon" />
+                    android:src="@drawable/sample" />
 
                 <TextView
                     android:id="@+id/textView3"
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/imageView2"
                     android:layout_centerHorizontal="true"
-                    android:text="Take Sample"
+                    android:text="Survey"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
             </RelativeLayout>
@@ -57,16 +57,14 @@
                     android:layout_height="70dp"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/icon" />
+                    android:src="@drawable/maps" />
 
                 <TextView
                     android:id="@+id/textView1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/imageView3"
-                    android:layout_centerHorizontal="true"
                     android:text="Map"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceLarge" android:layout_below="@+id/imageView3" android:layout_centerHorizontal="true"/>
 
             </RelativeLayout>
         </LinearLayout>
@@ -89,7 +87,7 @@
                     android:layout_height="70dp"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/icon" />
+                    android:src="@drawable/news" />
 
                 <TextView
                     android:id="@+id/TextView02"
@@ -114,7 +112,7 @@
                     android:layout_height="70dp"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/icon" />
+                    android:src="@drawable/about" />
 
                 <TextView
                     android:id="@+id/TextView01"
